0.0.1 (2018-09-21)
==================
 - Initial release with support for JSON and YAML