@@ -4,32 +4,18 @@ language: python
 
 matrix:
   include:
-    - python: 2.7
-      env: TOXENV=py27-django18
-    - python: 2.7
-      env: TOXENV=py27-django19
-    - python: 2.7
-      env: TOXENV=py27-django110
-    - python: 3.3
-      env: TOXENV=py33-django18
-    - python: 3.4
-      env: TOXENV=py34-django18
-    - python: 3.4
-      env: TOXENV=py34-django19
-    - python: 3.4
-      env: TOXENV=py34-django110
-    - python: 3.5
-      env: TOXENV=py35-django18
-    - python: 3.5
-      env: TOXENV=py35-django19
-    - python: 3.5
-      env: TOXENV=py35-django110
     - python: 3.6
-      env: TOXENV=py36-django18
+      env: TOXENV=py36-django111
     - python: 3.6
-      env: TOXENV=py36-django19
+      env: TOXENV=py36-django20
     - python: 3.6
-      env: TOXENV=py36-django110
+      env: TOXENV=py36-django21
+    - python: 3.7
+      env: TOXENV=py36-django111
+    - python: 3.7
+      env: TOXENV=py36-django20
+    - python: 3.7
+      env: TOXENV=py36-django21
 
 before_cache:
   - rm -rf $HOME/.cache/pip/log
