@@ -13,6 +13,9 @@ retest:
 coverage:
 	py.test --cov=django_perms_provisioner --cov-report=term-missing --cov-report=html
 
+lint:
+	flake8 src/
+
 docs:
 	$(MAKE) -C docs html
 
