@@ -5,10 +5,25 @@ Django Permissions Provisioner
 .. image:: https://img.shields.io/badge/code%20style-black-000000.svg
     :target: https://github.com/ambv/black
 
+.. image:: https://travis-ci.org/labd/django-perms-provisioner.svg?branch=master
+    :target: https://travis-ci.org/labd/django-perms-provisioner
+
+.. image:: http://codecov.io/github/labd/django-perms-provisioner/coverage.svg?branch=master
+    :target: http://codecov.io/github/labd/django-perms-provisioner?branch=master
+
+.. image:: https://img.shields.io/pypi/v/django-perms-provisioner.svg
+    :target: https://pypi.org/project/django-perms-provisioner/
+
 
 This package works like the standard Django loaddata / dumpdata commands only
 it's used for creating auth.Group objects with their provided permissions.
 
+
+Requirements
+============
+
+ - Python >= 3.6
+ - Django >= 1.11
 
 Installation
 ============
@@ -26,23 +41,6 @@ Provisioner`` is adding it to you installed apps.
   INSTALLED_APPS = [
       "django_perms_provisioner",
   ]
-
-
-Usage
-=====
-
-To load permissions from a configuration file
-
-.. code-block:: shell
-
-   ./manage.py loadperms permissions.yaml
-
-
-Or to dump permissions to a configuration file
-
-.. code-block:: shell
-
-   ./manage.py dumpperms > permissions.yaml
 
 
 Configuration
@@ -70,17 +68,41 @@ Examples:
 .. code-block:: javascript
 
    {
-     "groups" [
-       {
-         "name": "Group Name",
-         "permissions": {
-           "sites": ["site.add_site", "site.change_site"],
-           "wagtailadmin": ["admin.access_admin"]
-         }
+     "groups" [{
+       "name": "Group Name",
+       "permissions": {
+         "sites": ["site.add_site", "site.change_site"],
+         "wagtailadmin": ["admin.access_admin"]
        }
-     ]
+     }]
    }
 
 
-It is also possible to only create a group this can be done by leaving out the
-permissions object (dict).
+It is also possible to only create groups this can be done by just leaving out
+the permissions.
+
+Example:
+
+.. code-block:: yaml
+
+   ---
+   groups:
+     - name: Group Name
+     - name: Next Group Name
+
+
+Usage
+=====
+
+To load permissions from a configuration file
+
+.. code-block:: shell
+
+   ./manage.py loadperms permissions.yaml
+
+
+Or to dump permissions to a configuration file
+
+.. code-block:: shell
+
+   ./manage.py dumpperms > permissions.yaml
