@@ -3,14 +3,15 @@ from setuptools import find_packages, setup
 docs_require = ["sphinx>=1.4.0"]
 
 tests_require = [
-    "coverage==.4.2",
-    "pytest==3.0.5",
-    "pytest-django==3.1.2",
+    "coverage==4.5.1",
+    "pytest==3.8.1",
+    "pytest-cov==2.6.0",
+    "pytest-django==3.4.3",
     # Linting
     "isort==4.2.5",
-    "flake8==3.0.3",
+    "flake8==3.5.0",
     "flake8-blind-except==0.1.1",
-    "flake8-debugger==1.4.0",
+    "flake8-debugger==3.1.0",
 ]
 
 setup(
@@ -21,7 +22,7 @@ setup(
     url="https://github.com/labd/django-perms-provisioner",
     author="Lab Digital",
     author_email="opensource@labdigital.nl",
-    install_requires=["Cerberus==1.2", "Django>=1.8", "PyYAML==3.13"],
+    install_requires=["Cerberus==1.2", "Django>=1.11", "PyYAML==3.13"],
     tests_require=tests_require,
     extras_require={"docs": docs_require, "test": tests_require},
     use_scm_version=True,
@@ -34,17 +35,12 @@ setup(
         "Development Status :: 5 - Production/Stable",
         "Environment :: Web Environment",
         "Framework :: Django",
-        "Framework :: Django :: 1.7",
-        "Framework :: Django :: 1.8",
-        "Framework :: Django :: 1.9",
-        "Framework :: Django :: 1.10",
+        "Framework :: Django :: 1.11",
         "Framework :: Django :: 2.0",
         "Framework :: Django :: 2.1",
         "License :: OSI Approved :: MIT License",
         "Programming Language :: Python",
         "Programming Language :: Python :: 3",
-        "Programming Language :: Python :: 3.4",
-        "Programming Language :: Python :: 3.5",
         "Programming Language :: Python :: 3.6",
         "Programming Language :: Python :: 3.7",
     ],
