@@ -4,6 +4,16 @@ from django.conf import settings
 def pytest_configure():
     settings.configure(
         MIDDLEWARE_CLASSES=[],
+        INSTALLED_APPS=[
+            "django.contrib.admin",
+            "django.contrib.auth",
+            "django.contrib.contenttypes",
+            "django.contrib.messages",
+            "django.contrib.sessions",
+            "django.contrib.sites",
+            "django.contrib.staticfiles",
+            "django_perms_provisioner",
+        ],
         CACHES={
             "default": {
                 "BACKEND": "django.core.cache.backends.locmem.LocMemCache",
