@@ -1,12 +1,12 @@
 [tox]
-envlist = py{27,34,35,36}-django{18,19,110}
+envlist = py{36,37}-django{111,20,21}
 
 [testenv]
 commands = coverage run --parallel -m pytest {posargs}
 deps =
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
-    django110: Django>=1.10,<1.11
+    django111: Django>=1.11,<2.0
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
 extras = test
 
 # Uses default basepython otherwise reporting doesn't work on Travis where
